# j-perm

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
plugins/j_perm_sql/: README.md  pyproject.toml  requirements.txt
plugins/j_perm_sql/scripts/: regen_sql_grammar.py
plugins/j_perm_sql/src/j_perm_sql/: __init__.py  constructs.py  constructs_write.py  dialect.py  handler.py  install.py  pipeline.py  render.py
plugins/j_perm_sql/src/j_perm_sql/text/: __init__.py  block.py  transform.py
plugins/j_perm_sql/src/j_perm_sql/text/_generated/: lexer.py  parser.py
plugins/j_perm_sql/src/j_perm_sql/text/grammar/: sql.g  sql_lexer_config.py
plugins/j_perm_sql/tests/: conftest.py
plugins/j_perm_sql/tests/integration/: test_integration.py  test_integration_compiled.py  test_integration_write.py
plugins/j_perm_sql/tests/unit/: test_constructs.py  test_constructs_write.py  test_dialect.py  test_handler.py  test_install.py  test_pipeline.py  test_render.py  test_text_sql.py
scripts/: regen_grammar.py
src/: __init__.py  engine.py
src/j-perm/ops/: __init__.py  _exec.py  _if.py  assert.py  copy_d.py  delete.py  distinct.py  foreach.py  update.py
src/j-perm/utils/: subst.py  tuples.py
src/j_perm/: __init__.py  casters.py  construct_groups.py  core.py  engine.py  factory.py  jmes_ext.py  matchers.py  normalizer.py  pointer_processor.py  pointers.py  registry.py  subst.py
src/j_perm/constructs/: ref.py
src/j_perm/handlers/: __init__.py  constructs.py  constructs_async.py  container.py  container_async.py  flow.py  function.py  function_async.py  identity.py  merge.py  ops.py  ops_async.py  signals.py  special.py  special_async.py  template.py
src/j_perm/ops/: _assert.py  _assert_d.py  _exec.py  _if.py  assert.py  copy.py  copy_d.py  delete.py  distinct.py  foreach.py  replace_root.py  set.py  update.py
src/j_perm/processors/: __init__.py  pointer_processor.py
src/j_perm/resolvers/: __init__.py  pointer.py
src/j_perm/schema/: __init__.py
src/j_perm/stages/: __init__.py  shorthands.py
src/j_perm/text/: __init__.py  stage.py  transform.py
src/j_perm/text/_generated/: lexer.py  (+1 more)
src/j_perm/utils/: special.py
src/ops/: copy.py  replace_root.py
tests/: .coveragerc  conftest.py  pytest.ini  run.py
tests/integration/: test_integration.py
tests/unit/: test_async_compiled.py  test_async_core.py  test_async_engine.py  test_async_units.py  test_collection_handlers.py  test_compilation.py  test_construct_groups.py  test_container_handler.py  test_control_flow.py  test_core.py  test_factory.py  test_function_handlers.py  test_matchers.py  test_math_logic_handlers.py  test_ops.py  test_pointer_prefixes.py  test_pointer_resolver.py  test_raw_handler.py  test_security_limits.py  test_shorthand_stages.py  test_special_handlers.py  test_string_and_regex_handlers.py  test_template_handler.py  test_text_syntax.py  test_try_handler.py
(+2 files in other folders)
