[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[project]
name = "j-perm"
version = "1.4.0"
description = "json permutation library"
authors = [
    { name = "Roman", email = "kuschanow@gmail.com" },
]
readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

dependencies = [
    "jmespath",
    "regex"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
]

[project.urls]
Homepage = "https://github.com/kuschanow/j-perm"
Source = "https://github.com/kuschanow/j-perm"
Tracker = "https://github.com/kuschanow/j-perm/issues"
Documentation = "https://github.com/kuschanow/j-perm"

[tool.setuptools.packages.find]
where = ["src"]
