[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[project]
name = "j-perm"
version = "1.9.0"
description = "json permutation library"
authors = [
    { name = "Roman", email = "kuschanow@gmail.com" },
]
readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

dependencies = [
    "jmespath",
    "regex",
    "pyyaml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/j_perm --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/j_perm"]
omit = []

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]

[project.urls]
Homepage = "https://github.com/kuschanow/j-perm"
Source = "https://github.com/kuschanow/j-perm"
Tracker = "https://github.com/kuschanow/j-perm/issues"
Documentation = "https://github.com/kuschanow/j-perm"

[tool.setuptools.packages.find]
where = ["src"]
