[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[project]
name = "j-perm-sql"
version = "0.4.0"
description = "j-perm plugin for SQL"
authors = [
    { name = "Roman", email = "kuschanow@gmail.com" },
]
readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

dependencies = [
    "j-perm>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/j_perm_sql --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/j_perm_sql"]
omit = []

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]

[project.urls]
Homepage = "https://github.com/kuschanow/j-perm"
Source = "https://github.com/kuschanow/j-perm"
Tracker = "https://github.com/kuschanow/j-perm/issues"
Documentation = "https://github.com/kuschanow/j-perm"

[tool.setuptools.packages.find]
where = ["src"]
